# tjex

./: README.md  pyproject.toml
.github/actions/: setup.yml
.github/actions/setup/: action.yml
.github/workflows/: test.yml
demo/: README.md  demo.tape
scripts/: hotkey_table.py  update_hotkey_table.py
src/tjex/: config.py  curses_helper.py  jq.py  json_table.py  panel.py  table.py  table_panel.py  text_panel.py  tjex.py  utils.py
src/tjex/resources/: builtins.jq
tests/: integration_test.py  merge_keys_speed.py  test_json_table.py  test_table_panel.py
tests/cases/: big_ints.json  integration_big_ints.json  integration_empty_list.json  integration_multiple_files.json
tjex/: config.py  curses_helper.py  history.py  jq.py  panel.py  table_panel.py  text_panel.py  tjex.py
