[project]
name = "tjex"
version = "0.1.0"
description = "A Tabular Json Explorer"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Justin Knapheide", email = "mail@jknapheide.de" }]
requires-python = ">=3.12"
dependencies = ["argcomplete"]

[project.scripts]
tjex = "tjex.tjex:main"

[tool.pyright]
reportAny = false
reportExplicitAny = false

[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
